# hyprland-build

./: AUTOPILOT_IMPLEMENTATION.md  Actions.md  README.md  aq_log.txt  aq_section.txt  build.yml  build_all.sh  build_continue.sh  build_log.txt  build_log2.txt  build_log3.txt  check_build.py  cmake_err.txt  copilot_prompt.md  dashboard.py  debug_aquamarine.yml  debug_b64.txt  err.txt  err67.txt  err68.txt  fetch19.py  fetch_logs.py  get_aq_log.py  get_log.py  get_log2.py  glaze_releases.json  hl2.txt  hl_log.txt  job_log.txt  job_log2.txt  job_log3.txt  job_log4.txt  job_log5.txt  jobs67.json  jobs68.json  jobs69.json  latest_build_log.txt  monitor.py  monitor2.py  monitor_build.ps1  (+12 more)
.amazonq/rules/: AutoRun.md  Goal.md  Hyprland0540.md  Shell.md  hyprgraphics-main.md  xdg-desktop-portal-hyprland-master.md
.dc/: config.json
.github/prompts/: Autopilot-Execute.prompt.md  Goal.prompt.md
.github/scripts/: cable-agent.sh
.github/workflows/: auto-heal.yml  build.yml  cable-agent.yml  cmake-multi-platform.yml
Hyprland-0.54.0zip/Hyprland-0.54.0/hyprtester/src/tests/main/: dwindle.cpp
Hyprland-0.54.0zip/Hyprland-0.54.0/src/config/: defaultConfig.hpp
Hyprland-0.54.0zip/Hyprland-0.54.0/src/desktop/rule/: Rule.cpp
Hyprland-0.54.0zip/Hyprland-0.54.0/src/desktop/rule/windowRule/: WindowRuleApplicator.cpp
Hyprland-0.54.0zip/Hyprland-0.54.0/src/managers/: KeybindManager.cpp
Hyprland-0.54.0zip/Hyprland-0.54.0/start/src/helpers/: Nix.cpp
Hyprland-0.54tar-gz/Hyprland-0.54.0/src/: Compositor.cpp  Compositor.hpp
Hyprland-0.54tar-gz/Hyprland-0.54.0/src/desktop/view/: Popup.cpp
Hyprland-0.54tar-gz/Hyprland-0.54.0/src/managers/: KeybindManager.hpp
Hyprland-0.54tar-gz/Hyprland-0.54.0/src/xwayland/: XWM.hpp
hyprgraphics-main/hyprgraphics-main/: .gitignore  CMakeLists.txt  flake.nix  hyprgraphics.pc.in
hyprgraphics-main/hyprgraphics-main/.github/workflows/: arch.yml  nix.yml
hyprgraphics-main/hyprgraphics-main/include/hyprgraphics/cairo/: CairoSurface.hpp
hyprgraphics-main/hyprgraphics-main/include/hyprgraphics/color/: Color.hpp
hyprgraphics-main/hyprgraphics-main/include/hyprgraphics/egl/: Egl.hpp
hyprgraphics-main/hyprgraphics-main/include/hyprgraphics/image/: Image.hpp
hyprgraphics-main/hyprgraphics-main/include/hyprgraphics/resource/: AsyncResourceGatherer.hpp
hyprgraphics-main/hyprgraphics-main/include/hyprgraphics/resource/resources/: AsyncResource.hpp  ImageResource.hpp  StaticImageResource.hpp  TextResource.hpp
hyprgraphics-main/hyprgraphics-main/nix/: default.nix  overlays.nix
hyprgraphics-main/hyprgraphics-main/src/cairo/: CairoSurface.cpp
hyprgraphics-main/hyprgraphics-main/src/color/: Color.cpp
hyprgraphics-main/hyprgraphics-main/src/egl/: Egl.cpp
hyprgraphics-main/hyprgraphics-main/src/image/: Image.cpp
hyprgraphics-main/hyprgraphics-main/src/image/formats/: Avif.cpp  Avif.hpp  Bmp.cpp  Bmp.hpp  Jpeg.cpp  Jpeg.hpp  JpegXL.cpp  JpegXL.hpp  Png.cpp  Png.hpp  Svg.cpp  Svg.hpp  Webp.cpp  Webp.hpp
hyprgraphics-main/hyprgraphics-main/src/image/utils/: Format.cpp  Format.hpp
hyprgraphics-main/hyprgraphics-main/src/resource/: AsyncResourceGatherer.cpp
hyprgraphics-main/hyprgraphics-main/src/resource/resources/: AsyncResource.cpp  AsyncResource.hpp  ImageResource.cpp  StaticImageResource.cpp  TextResource.cpp
hyprgraphics-main/hyprgraphics-main/tests/: arg.cpp  image.cpp
hyprgraphics-main/hyprgraphics-main/tests/resource/images/: hyprland.avif  hyprland.jxl  hyprland.symlink
logs_extracted/: 0_build.txt
logs_extracted_23508/: 0_build.txt
run23480656132_logs/: 0_build.txt
(+5 files in other folders)
